[package]
name = "fluffy"
version = "0.2.0"
authors = ["Ngoc <nguyenanhngoc.do@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
actix-web = "2.0"
actix-web-httpauth = "0.3"
actix-cors = "0.2"
actix-service = "1.0"
mysql = "17.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "*"
md5 = "0.7"
rand = "0.7"
futures = "0.3"
#jsonwebtoken = "6.0"
curl = "0.4"
regex = "1.3"
chrono = "0.4"
redis = "0.13"
tera = { version = "1.0" }

[features]
debug = []
