[package]
name = "fluffy"
version = "0.2.0"
authors = ["Ngoc <nguyenanhngoc.do@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.4"
actix-service = "2.0.2"
mysql = "24.0.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
json = "*"
md5 = "0.7"
rand = "0.8.5"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
curl = "0.4.44"
regex = "1.9.5"
chrono = "0.4.30"
redis = "0.23.3"
tera = { version = "1.19.1" }

[features]
debug = []
